# zappy

./: .envrc  .gitignore  Cargo.toml  Dockerfile  Makefile.toml  README.md  compose.yaml  flake.nix  rustfmt.toml
.github/workflows/: build.yaml  rust.yaml
drill/: benchmark.yml
migrations/: 20240921201822_initdb.down.sql  20240921201822_initdb.up.sql
src/: lib.rs  main.rs  service.rs
