[package]
name = "zappy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zappy"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.86"
futures = "0.3.30"
http-body-util = "0.1.2"
hyper = { version = "1.4.1", features = ["full", "server"] }
hyper-util = { version = "0.1.6", features = ["full"] }
tokio = { version = "1.38.1", features = ["full"] }
tokio-stream = "0.1.15"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }

[dev-dependencies]
