[package]
name = "zappy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zappy"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
envy = "0.4.2"
futures = "0.3.30"
http-body-util = "0.1.2"
hyper = { version = "1.4.1", features = ["full", "server"] }
hyper-util = { version = "0.1.6", features = ["full"] }
serde = { version = "1.0.210", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["postgres", "chrono", "runtime-tokio", "sqlx-macros", "uuid"] }
tokio = { version = "1.38.1", features = ["full"] }
tokio-stream = "0.1.15"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
uuid = { version = "1.10.0", features = ["v7", "v1", "v4"] }

[dev-dependencies]
